<resources>
    <string name="app_name">StudyHelper</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">test</string>
    <plurals name="task_count_text">
        <item quantity="one">%d current task</item>
        <item quantity="other">%d current tasks</item>
    </plurals>
    <string name="title_activity_task">TaskActivity</string>

    <!-- Task Strings -->
    <string name="dialog_add_task_title">Add A Task</string>
    <string name="dialog_edit_task_title">Update The Task</string>
    <string name="dialog_add_task_hint">Homework #1</string>
    <string name="Exam">Exam</string>
    <string name="Homework">Homework</string>
    <string name="Meeting">Meeting</string>
    <string name="Progress">Progress</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_work">Work</string>
    <string name="action_classmates">Classmates</string>

    <string name="dialog_add_course_title">Add A Course</string>
    <string name="dialog_edit_course_title">Edit Course</string>
    <string name="dialog_add_classmate_title">Add A Classmate</string>
    <string name="dialog_edit_classmate_title">Edit Classmate</string>
    <string name="course_name_hint">course name</string>
    <string name="delete_title">Delete</string>
    <string name="classmate_name_hint">Name</string>
    <string name="classmate_email_hint">Email Address</string>
    <string name="study_mode_title">Study Mode</string>

    <!-- Login Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>

    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_by_key">Add With Key</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notes_hint">Write notes here</string>
    <string name="action_set_notification">Notification</string>
    <string name="set_notification_button">Set Notification</string>
    <string name="dialog_set_noti_title">Set a Notification</string>
    <string name="dialog_set_noti_hours_before">Set the number of days before the task to receive a notification</string>
    <string name="share_dialog_title">Share Task With Classmates</string>
    <string name="share_button_text">Share</string>
    <string name="share_subject_line">Sharing a StudyHelper Task</string>
    <string name="share_message_format">A classmate would like to share the task \n\n %1$s \n\nwith you.
        Copy the following course key into the "Add task with key" option in the Task View. \n\n
        Key:  %2$s
    </string>
    <string name="add_by_key_title">Add Task With Key</string>
    <string name="add_by_key_hint">Key</string>
    <string name="permission_denied_message">Settings permission not granted- Study Mode will not work</string>

</resources>
